--- a/src/pages/headers-footers/headers-footers.pug
+++ b/src/pages/headers-footers/headers-footers.pug
@@ -89,6 +89,7 @@ block content
                         mod: 'with-arrow'
                     }
                 },
+                mainText: "Copyright © 2018 Toxin отель. Все права защищены.",
                 socialIcons: [
                     {
                         icon: "twitter",
@@ -106,8 +107,7 @@ block content
             }
         .footerBlock__item
             +footer(footerData)
-        .footerBlock__item
-
+        
 
 //- <!DOCTYPE html>
 //- html(lang="en")
