--- a/src/templates/ui-kit.pug
+++ b/src/templates/ui-kit.pug
@@ -4,8 +4,9 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         block title
-    body
-        .logo
+    body.ui-kit
+        .test
+        .ui-kit__logo
             include ../images/logo-bw.svg
         block content
         
