--- a/src/components/footer-navigation/footer-navigation.scss
+++ b/src/components/footer-navigation/footer-navigation.scss
@@ -1,3 +1,29 @@
-.test-foo {
-    color: green
+.footer-navigation {
+    padding: 0;
+    list-style: none;
+    &__title {
+        font-family: Montserrat, sans-serif;
+        font-weight: 700;
+        font-size: 12px;
+        white-space: nowrap;
+        color: $dark100;
+        line-height: 15px;
+        text-transform: uppercase;
+        margin-bottom: 20px;
+    }
+    &__item {
+        &::first-letter {
+            text-transform: uppercase;
+        }
+        font-family: Montserrat, sans-serif;
+        font-size: 14px;
+        line-height: 24px;
+        color: rgba(31, 32, 65, 0.50);
+        margin-bottom: 13px;
+    }
+    &__link {
+        text-decoration: none;
+        color: inherit;
+        white-space: nowrap;
+    }
 }
