--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,34 +1,28 @@
 .footer {
     background-color: #FFF;
-    @media (max-width: 930px) {
-        height: 367px;
-        margin: auto;
-        background: #FFFFFF;
-        box-shadow: 0 10px 20px rgba(31, 32, 65, 0.05);
-        box-sizing: border-box;
-        padding-top: 118px;
+    box-shadow: 0 10px 20px $dark5;
+    padding: 120px 0;
+    @media (min-width: 930px) {
+        height: auto;
+        padding: 0;
     }
     &__content {
         margin: 0 auto;
-        padding-top: 85px;
         max-width: 1160px;
         display: flex;
-        justify-content: space-between;
-        height: 372px;
-        @media (max-width: 930px) {
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            height: 75px;
+        justify-content: center;
+        @media (min-width: 930px) {
+            padding: 87px 0 73px;    
+            justify-content: space-between;
         }
     }
     &__information {
-        max-width: 254px;
+        max-width: 253px;
         margin-top: 13px;
     }
     &__logo svg {
         display: block;
-        margin-bottom: 13px;
+        margin-bottom: 17px;
     }
     &__text,
     &__ad {
@@ -42,8 +36,9 @@
         margin-bottom: 13px;
     }
     &__ad {
-        @media (max-width: 930px) {
-            display: none;
+        display: none;
+        @media (min-width: 930px) {
+            display: block;
         }
     }
     &__title {
@@ -56,24 +51,24 @@
         margin-bottom: 20px;
     }
     &__navigation {
-        width: 549px;
-        display: flex;
-        justify-content: space-between;
-        @media (max-width: 930px) {
-            display: none;
+        display: none;
+        @media (min-width: 930px) {
+            width: 547px;
+            display: flex;
+            justify-content: space-between;
         }
     }
     &__subscription {
         margin-top: 16px;
-        max-width: 260px;
-        @media (max-width: 930px) {
-            display: none;
+        display: none;
+        @media (min-width: 930px) {
+            display: block;
+            max-width: 260px;
         }
     }
     &__wrapper {
-        box-shadow: 0px -1px 0px rgba(31, 32, 65, 0.1);
-        @media (max-width: 930px) {
-            box-shadow: none;
+        @media (min-width: 930px) {
+            box-shadow: 0px -1px 0px rgba(31, 32, 65, 0.1);
         }
     }
     &__bar {
@@ -84,9 +79,9 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        @media (max-width: 930px) {
-            flex-direction: column;
-
+        flex-direction: column;
+        @media (min-width: 930px) {
+            flex-direction: row;
         }
     }
     &__social {
