--- a/src/components/burger/burger.scss
+++ b/src/components/burger/burger.scss
@@ -64,6 +64,8 @@
         margin: 5px auto 0;
         border: 1px solid  rgba(31, 32, 65, 0.25);
         padding-bottom: 10px;
+        position: relative;
+        z-index: 2;
     }
     &__name {
         font-family: Montserrat, sans-serif;
