--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -3,8 +3,6 @@
     background-color: #ffffff;
     box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
     position: relative;
-    display: flex;
-    align-items: center;
     &__burger {
         @media (min-width: 930px) {
             display: none;
@@ -15,9 +13,10 @@
         display: flex;
         margin: 0 auto;
         @media (min-width: 930px) {
+            min-height: 70px;
             display: grid;
-            grid-template-columns: 1fr 10fr 1fr;
             align-items: center;
+            grid-template-columns: 1fr 10fr 1fr;
         }
     }
     &__navigation{
@@ -29,7 +28,7 @@
     }
     &__logo {
         position: absolute;
-        top: 9px;
+        top: 15px;
         svg {
             display: block;
         }
