--- a/src/components/footer-navigation/footer-navigation.scss
+++ b/src/components/footer-navigation/footer-navigation.scss
@@ -1,6 +1,7 @@
 .footer-navigation {
     padding: 0;
     list-style: none;
+    margin: 0;
     &__title {
         font-family: Montserrat, sans-serif;
         font-weight: 700;
