--- a/src/components/burger/burger.scss
+++ b/src/components/burger/burger.scss
@@ -59,10 +59,10 @@
             display: none;
         }
         background-color: #ffffff;
-        box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
+        box-shadow: 0px 10px 20px $dark5;
         border-radius: 4px;
         margin: 5px auto 0;
-        border: 1px solid  rgba(31, 32, 65, 0.25);
+        border: 1px solid  $dark25;
         padding-bottom: 10px;
         position: relative;
         z-index: 2;
