--- a/src/components/footer-navigation/footer-navigation.scss
+++ b/src/components/footer-navigation/footer-navigation.scss
@@ -19,7 +19,7 @@
         font-family: Montserrat, sans-serif;
         font-size: 14px;
         line-height: 24px;
-        color: rgba(31, 32, 65, 0.50);
+        color: $dark50;
         margin-bottom: 13px;
         &:hover, 
         &:active {
