--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,7 +1,7 @@
 .header {
     min-height: 70px;
     background-color: #ffffff;
-    box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
+    box-shadow: 0px 10px 20px $dark5;
     position: relative;
     &__burger {
         @media (min-width: 930px) {
@@ -52,7 +52,7 @@
     &__name {
         font-family: Montserrat, sans-serif;
         font-size: 14px;
-        color: rgba(31, 32, 65, 0.5);
+        color: $dark5;
         text-transform: capitalize;
         white-space: nowrap;
         display: flex;
@@ -62,7 +62,7 @@
             width: 1px;
             height: 30px;
             display: block;
-            background: rgba(31, 32, 65, 0.1);
+            background: $dark1;
             margin: 0 20px 0 20px;
         }
     }
