--- a/src/components/social-icon/social-icon.scss
+++ b/src/components/social-icon/social-icon.scss
@@ -3,7 +3,7 @@
     font-size: 24px;
     &__button {
         text-decoration: none;
-        background: linear-gradient(#BC9CFF 0%, #8BA4F9 100%);
+        background: $gradientPurpleBlue;
         -webkit-background-clip: text;
         background-clip: text;
         -webkit-text-fill-color: transparent;
