--- a/src/components/text-field/text-field.scss
+++ b/src/components/text-field/text-field.scss
@@ -52,7 +52,7 @@
             content: 'arrow_forward';
             font-size: 24px;
             position: absolute;
-            background: linear-gradient(#BC9CFF 0%, #8BA4F9 100%);
+            background: $gradientPurpleBlue;
             -webkit-background-clip: text;
             background-clip: text;
             -webkit-text-fill-color: transparent;
