--- a/src/pages/headers-footers/headers-footers.scss
+++ b/src/pages/headers-footers/headers-footers.scss
@@ -12,7 +12,7 @@
 @import "../../components/footer-small/footer-small.scss";
 
 .headers-footers {
-    margin-top: 140px;
+    margin: 140px 0;
     &__item {
         margin-bottom: 40px;
         &_small {
