--- a/src/pages/form-elements/form-elements.pug
+++ b/src/pages/form-elements/form-elements.pug
@@ -12,38 +12,39 @@ block content
             {
                 title: "text field",
                 subtitle: "default",
-                placeholder: "Email"
+                placeholder: "Email",
+                mods: ["default"]
             },
             {
                 title: "text field",
                 subtitle: "hover / focus",
                 placeholder: "This is pretty awesome",
-                mod: "focus"
+                mods: ["focus"]
             },
             {
                 title: "dropdown",
                 placeholder: "Сколько гостей",
-                mod: "expanded"
+                mods: ["expanded"]
             },
             {
                 title: "date dropdown",
-                mod: ["expanded", "short"],
+                mods: ["expanded", "short"],
                 className: "js-inputs__date-dropdown"
             },
             {
                 title: "date dropdown",
-                mod: ["expanded", "short"],
+                mods: ["expanded", "short"],
                 className: "js-inputs__date-dropdown js-inputs__date-dropdown_chosen"
             },
             {
                 title: "filter date dropdown",
-                mod: "expanded",
+                mods: ["expanded"],
                 className: "js-inputs__filter-date"
             },
             {
                 title: "subscription text field",
                 placeholder: "Email",
-                mod: "with-arrow"
+                mods: ["with-arrow"]
             }
         ]
     .form-elements
