--- a/src/pages/form-elements/form-elements.pug
+++ b/src/pages/form-elements/form-elements.pug
@@ -12,8 +12,7 @@ block content
             {
                 title: "text field",
                 subtitle: "default",
-                placeholder: "Email",
-                mods: ["default"]
+                placeholder: "Email"
             },
             {
                 title: "text field",
