--- a/src/pages/form-elements/form-elements.pug
+++ b/src/pages/form-elements/form-elements.pug
@@ -26,6 +26,10 @@ block content
                 mods: ["expanded"]
             },
             {
+                title: "masked text field",
+                placeholder: "ДД.ММ.ГГГГ"
+            },
+            {
                 title: "date dropdown",
                 mods: ["expanded", "short"],
                 className: "js-inputs__date-dropdown"
