--- a/src/components/search-room/search-room.pug
+++ b/src/components/search-room/search-room.pug
@@ -1,20 +1,20 @@
-.search-room
-    .search-room__content
-        .search-room__title найдём номера под ваши пожелания
-        .search-room__range
-            .search-room__date
-                .search-room__text прибытие
-                .search-room__calendar
-                    include ../../components/date/date
-                    +date(false)
-            .search-room__date
-                .search-room__text выезд
-                .search-room__calendar
-                    +date(true)
-        .search-room__guest
-            .search-room__text гости
-            .search-room__dropdown
-                include ../../components/dropdown/dropdown
-        .search-room__button
-            include ../../components/submit-button/submit-button
-            +submit('подобрать номер', true, '#')
+//- .search-room
+//-     .search-room__content
+//-         .search-room__title найдём номера под ваши пожелания
+//-         .search-room__range
+//-             .search-room__date
+//-                 .search-room__text прибытие
+//-                 .search-room__calendar
+//-                     include ../../components/date/date
+//-                     +date(false)
+//-             .search-room__date
+//-                 .search-room__text выезд
+//-                 .search-room__calendar
+//-                     +date(true)
+//-         .search-room__guest
+//-             .search-room__text гости
+//-             .search-room__dropdown
+//-                 //- include ../../components/dropdown/dropdown
+//-         .search-room__button
+//-             include ../../components/submit-button/submit-button
+//-             +submit('подобрать номер', true, '#')
