--- a/src/components/search-room/search-room.scss
+++ b/src/components/search-room/search-room.scss
@@ -1,7 +1,7 @@
-@import '../../components/date/date.scss';
-@import '../../components/calendar/calendar.scss';
-@import '../../components/dropdown/dropdown.scss';
-@import '../../components/submit-button/submit-button.scss';
+// @import '../../components/date/date.scss';
+// @import '../../components/calendar/calendar.scss';
+// @import '../../components/dropdown/dropdown.scss';
+// @import '../../components/submit-button/submit-button.scss';
 
 .search-room {
     max-width: 380px;
