--- a/src/pages/form-elements/form-elements.scss
+++ b/src/pages/form-elements/form-elements.scss
@@ -4,3 +4,5 @@
 
 @import "../../components/inputs/inputs.scss";
 @import "../../components/text-field/text-field.scss";
+@import "../../components/dropdown/dropdown.scss";
+@import "../../components/guests/guests.scss";
