buttons added to guest dropdown

--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -1,5 +1,8 @@
 .button{
     position: relative;
+    &_hidden {
+        visibility: hidden;
+    }
     &__link {
         font-family: Montserrat, sans-serif;
         font-size: 12px;
