--- a/src/pages/form-elements/form-elements.pug
+++ b/src/pages/form-elements/form-elements.pug
@@ -3,6 +3,7 @@ include ../../components/inputs/inputs.pug
 include ../../components/text-field/text-field.pug
 include ../../components/dropdown/dropdown.pug
 include ../../components/guests/guests.pug
+include ../../components/button/button.pug
 
 
 block title
