--- a/src/pages/form-elements/form-elements.scss
+++ b/src/pages/form-elements/form-elements.scss
@@ -6,3 +6,4 @@
 @import "../../components/text-field/text-field.scss";
 @import "../../components/dropdown/dropdown.scss";
 @import "../../components/guests/guests.scss";
+@import "../../components/button/button.scss";
